--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Native Router</title>
-    <script type="module" crossorigin src="/native-router-react/assets/index.c4323875.js"></script>
-    <link rel="modulepreload" href="/native-router-react/assets/vendor.717894df.js">
+    <script type="module" crossorigin src="/native-router-react/assets/index.de4e5c89.js"></script>
+    <link rel="modulepreload" href="/native-router-react/assets/vendor.3d96c833.js">
+    <link rel="stylesheet" href="/native-router-react/assets/index.b97d4572.css">
   </head>
   <body>
     <div id="root"></div>
