--- a/types/Location.html
+++ b/types/Location.html
@@ -107,7 +107,7 @@
 <li>
 <h4>T = <span class="tsd-signature-type">any</span></h4></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/e8b0c77/src/types.ts#L5">src/types.ts:5</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/538439b/src/types.ts#L5">src/types.ts:5</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -139,7 +139,7 @@
 <li class="tsd-kind-function"><a href="../functions/View.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>View</a></li>
 <li class="tsd-kind-function"><a href="../functions/useData.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Data</a></li>
 <li class="tsd-kind-function"><a href="../functions/useLoading.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Loading</a></li>
-<li class="tsd-kind-function"><a href="../functions/useNamedData.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Named<wbr/>Data</a></li>
+<li class="tsd-kind-function"><a href="../functions/useMatched.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Matched</a></li>
 <li class="tsd-kind-function"><a href="../functions/defaultResolveView.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>default<wbr/>Resolve<wbr/>View</a></li>
 <li class="tsd-kind-function"><a href="../functions/BaseRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Base<wbr/>Router</a></li>
 <li class="tsd-kind-function"><a href="../functions/HashRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Hash<wbr/>Router</a></li>
