--- a/functions/MemoryRouter.html
+++ b/functions/MemoryRouter.html
@@ -113,7 +113,7 @@
 <h5>__namedParameters: <a href="../types/_internal_.Props-2.html" class="tsd-signature-type" data-tsd-kind="Type alias">Props</a><span class="tsd-signature-symbol"> &amp; </span><a href="../types/_internal_.MemoryHistoryOptions.html" class="tsd-signature-type" data-tsd-kind="Type alias">MemoryHistoryOptions</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="../interfaces/_internal_.Element.html" class="tsd-signature-type" data-tsd-kind="Interface">Element</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/538439b/src/components/Router.tsx#L105">src/components/Router.tsx:105</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/wmzy/native-router-react/blob/a9b8b0b/src/components/Router.tsx#L118">src/components/Router.tsx:118</a></li></ul></aside></li></ul></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -147,11 +147,12 @@
 <li class="tsd-kind-function"><a href="useLoading.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Loading</a></li>
 <li class="tsd-kind-function"><a href="useMatched.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Matched</a></li>
 <li class="tsd-kind-function"><a href="defaultResolveView.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>default<wbr/>Resolve<wbr/>View</a></li>
-<li class="tsd-kind-function"><a href="BaseRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Base<wbr/>Router</a></li>
+<li class="tsd-kind-function"><a href="createRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>create<wbr/>Router</a></li>
+<li class="tsd-kind-function"><a href="Router.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Router</a></li>
+<li class="tsd-kind-function"><a href="HistoryRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>History<wbr/>Router</a></li>
 <li class="tsd-kind-function"><a href="HashRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Hash<wbr/>Router</a></li>
 <li class="current tsd-kind-function"><a href="MemoryRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Memory<wbr/>Router</a></li>
 <li class="tsd-kind-function"><a href="useRouter.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>use<wbr/>Router</a></li>
-<li class="tsd-kind-function"><a href="Router.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>Router</a></li>
 <li class="tsd-kind-function"><a href="create.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>create</a></li>
 <li class="tsd-kind-function"><a href="match.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>match</a></li>
 <li class="tsd-kind-function"><a href="toLocation.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>to<wbr/>Location</a></li>
