--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
 <h2>native-router-react</h2></div>
 <div class="tsd-panel tsd-typography">
 <a href="#native-router-react" id="native-router-react" style="color: inherit; text-decoration: none;">
-  <h1>native-router-react</h1>
+  <h1>Native Router React</h1>
 </a>
 <blockquote>
 <p>A route close to the native experience for react.</p>
 </blockquote>
+<p>English | <a href="./README-zh_CN.md">简体中文</a></p>
 
 <a href="#features" id="features" style="color: inherit; text-decoration: none;">
   <h2>Features</h2>
@@ -112,8 +113,8 @@
 <li>Asynchronous navigation</li>
 <li>Cancelable</li>
 <li>Page data concurrent fetch</li>
-<li>Prefetch and preview</li>
-<li>Most unused code can be tree-shaking</li>
+<li>Link prefetch and preview</li>
+<li>Most unused features can be tree-shaking</li>
 </ul>
 
 <a href="#install" id="install" style="color: inherit; text-decoration: none;">
@@ -129,8 +130,8 @@
 </code></pre>
 <p>See <a href="/demos/">demos</a> for a complete example.</p>
 
-<a href="#docs" id="docs" style="color: inherit; text-decoration: none;">
-  <h2>Docs</h2>
+<a href="#documentation" id="documentation" style="color: inherit; text-decoration: none;">
+  <h2>Documentation</h2>
 </a>
 <p><a href="https://wmzy.github.io/native-router-react/modules.html">API</a></p>
 </div></div>
